# django-tui-editor

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
django_toastui_editor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django_toastui_markdown_editor.egg-info/: PKG-INFO  SOURCES.txt
django_tui_editor.egg-info/: PKG-INFO  SOURCES.txt
toastui_editor/: __init__.py  apps.py  widgets.py
tui_editor/: __init__.py  apps.py  fields.py  widgets.py
tui_editor/static/tui_editor/: toastui-editor-all.min.js  tui-widget.css  tui-widget.js
